# merdag

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.MD  README.md  SKILL.md  init_spec.md  progress.md  pyproject.toml  ralph.py  record_demo.py
merdag/: __init__.py  __main__.py  cli.py  decisions.py  llm.py  parser.py  serve.py  simulate.py  status.py  updater.py  watch.py
tests/: test_stage2_cli.py  test_stage3_simulate.py  test_stage4_watch.py  test_stage5_human.py
