[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "merdag"
version = "0.1.0"
description = "Shared Mermaid execution plan for agent fleets"
requires-python = ">=3.11"
dependencies = [
    "click",
    "openai",
    "filelock",
]

[project.scripts]
merdag = "merdag.cli:main"
