[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "merdag"
version = "0.1.0"
description = "Shared Mermaid execution plan for agent fleets"
requires-python = ">=3.11"
dependencies = [
    "click",
    "openai",
    "filelock",
]

[project.scripts]
merdag = "merdag.cli:main"

[tool.setuptools.packages.find]
include = ["merdag*"]
